--- a/app/globals.scss
+++ b/app/globals.scss
@@ -77,20 +77,7 @@ body {
     // background-color: hsl(235, 24%, 19%);
     // box-shadow: 1px 3px 7px 0px hsl(235, 24%, 19%);
 
-    [type="checkbox"] {
-      outline: none;
-      border-radius: 50%;
-      padding: 13px;
-      margin: 10px;
-      background-color: transparent;
-      /* margin-right: 25px; */
-      border: 1px solid hsl(234, 39%, 85%);
 
-      &:checked {
-        --tw-ring-color: transparent;
-        // background-image: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
-      }
-    }
 
     [type="text"] {
       border: none;
@@ -118,4 +105,78 @@ body {
 
 .unactive {
   color: white !important;
+}
+
+.ch_h {
+  background-color: rgb(37, 39, 60);
+  color: black;
+  position: relative;
+  padding: 10px;
+
+
+
+  [type="checkbox"] {
+    position: absolute;
+    background-color: rgb(37, 39, 60);
+    opacity: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    cursor: pointer;
+
+    &:checked~.chh {
+      background-image: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+    }
+
+    &:checked~.chh svg {
+      display: flex;
+    }
+  }
+
+  .chh {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    svg {
+      position: absolute;
+      font-size: 15px;
+      display: none;
+    }
+  }
+
+}
+
+.count_out {
+  color: white;
+  margin-top: 30px;
+  padding: 15px 25px;
+  background-color: #25273c;
+  display: none;
+}
+
+@media(max-width:767px) {
+  .container {
+    width: 300px;
+
+  }
+
+  .text {
+    width: 315px !important;
+    font-size: 20px !important;
+  }
+
+  .count {
+    display: none;
+  }
+
+  .count_out {
+    display: flex;
+  }
 }
